@@ -16,7 +16,7 @@
 		  <div class="field">
 			<div class="formHelp" i18n:translate="paste_dlg_text_title"></div>
 			<div class="widget">
-			  <textarea  id="content" name="content" rows="15" cols="100" wrap="soft" class="mceFocus"></textarea>
+			  <textarea  id="mceTextPaste" name="content" rows="15" cols="100" wrap="soft" class="mceFocus"></textarea>
 			</div>
 		  </div>
 
