@@ -5,6 +5,8 @@ HISTORY
 1.1.1 (unreleased)
 ------------------
 
+- Apply a workaround to fix the "Paste Text" dialog.
+  [davisagli]
 
 1.1 (2010-07-23)
 ----------------
